Fixing scrollbar bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
   text-decoration: none;
   box-sizing: border-box;
   scrollbar-width: thin;
-  scrollbar-color: rgba(0, 0, 0, .7) #fff;
+  scrollbar-color: rgba(0, 0, 0, .5) #fff;
   font-family: 'Pop background-color: pins', sans-serif;
 }
 
@@ -19,7 +19,7 @@ body {
 
 /* width */
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 6px;
 }
 
 /* Track */
@@ -30,8 +30,8 @@ body {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, .7);
-  border-radius: .25rem;
+  background-color: rgba(0, 0, 0, .5);
+  border-radius: .15rem;
 }
 
 
